[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-stitch"
version = "0.1.0"
description = "Constraint manifold projection for model activation spaces"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["fleet_stitch*"]
